[package]
name = "expense_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["cargo", "derive"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
chrono = { version = "0.4.43", features = ["serde"] }

[[bin]]
name = "et"
path = "src/main.rs"